<resources>
    <string name="app_name">NatsuChin</string>

    <string name="defaut_UserA">Player1</string>
    <string name="defaut_UserB">Player2</string>
    <string name="defaut_UserC">Player3</string>
    <string name="defaut_UserU">Me</string>
    <string name="NEXT_ButtonName">NEXT</string>
    <string name="first_bet">10</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="player3">Player3</string>
    <string name="player_me">Player Me</string>
    <string name="next_play">Next Play</string>
    <string name="title_activity_play_board">PlayBoard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>